--- a/SimulationofATMBANK/SimulationofATMBANK/SimulationofATMBANK.csproj
+++ b/SimulationofATMBANK/SimulationofATMBANK/SimulationofATMBANK.csproj
@@ -44,6 +44,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaşkaHesabaParaYatırma.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="BaşkaHesabaParaYatırma.Designer.cs">
+      <DependentUpon>BaşkaHesabaParaYatırma.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -82,6 +88,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="BaşkaHesabaParaYatırma.resx">
+      <DependentUpon>BaşkaHesabaParaYatırma.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
