--- a/SimulationofATMBANK/SimulationofATMBANK/SimulationofATMBANK.csproj
+++ b/SimulationofATMBANK/SimulationofATMBANK/SimulationofATMBANK.csproj
@@ -86,6 +86,12 @@
     <Compile Include="ParaTransferi.Designer.cs">
       <DependentUpon>ParaTransferi.cs</DependentUpon>
     </Compile>
+    <Compile Include="ParaÇekme.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ParaÇekme.Designer.cs">
+      <DependentUpon>ParaÇekme.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="BaşkaHesabaParaYatırma.resx">
@@ -108,6 +114,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ParaTransferi.resx">
       <DependentUpon>ParaTransferi.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ParaÇekme.resx">
+      <DependentUpon>ParaÇekme.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
