--- a/SimulationofATMBANK/SimulationofATMBANK/SimulationofATMBANK.csproj
+++ b/SimulationofATMBANK/SimulationofATMBANK/SimulationofATMBANK.csproj
@@ -134,6 +134,12 @@
     <Compile Include="2.Anasayfa.Designer.cs">
       <DependentUpon>2.Anasayfa.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form4.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form4.Designer.cs">
+      <DependentUpon>Form4.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form3.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -166,6 +172,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SimulasyonPanel.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SimulasyonPanel.Designer.cs">
+      <DependentUpon>SimulasyonPanel.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="10.DiğerHesaplar.resx">
       <DependentUpon>10.DiğerHesaplar.cs</DependentUpon>
     </EmbeddedResource>
@@ -211,6 +223,9 @@
     <EmbeddedResource Include="2.Anasayfa.resx">
       <DependentUpon>2.Anasayfa.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Form4.resx">
+      <DependentUpon>Form4.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form5.resx">
       <DependentUpon>Form5.cs</DependentUpon>
     </EmbeddedResource>
@@ -232,6 +247,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="SimulasyonPanel.resx">
+      <DependentUpon>SimulasyonPanel.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
